syntax = "proto3";

option go_package = "auto-parts-catalog/catalog-service/catalogservice/gen";

package gen;

import "google/protobuf/empty.proto";

service AutoPartComponentService {
  rpc CreateRootAutoPartComponent(CreateRootAutoPartComponentRequest) returns (AutoPartComponent);
  rpc CreateNonRootAutoPartComponent(CreateNonRootAutoPartComponentRequest) returns (AutoPartComponent);
  rpc GetAutoPartComponent(GetAutoPartComponentRequest) returns (AutoPartComponent);
  rpc UpdateAutoPartComponent(UpdateAutoPartComponentRequest) returns (google.protobuf.Empty);
  rpc DeleteAutoPartComponent(DeleteAutoPartComponentRequest) returns (google.protobuf.Empty);
}

message CreateRootAutoPartComponentRequest {
  int32 auto_part_id = 1;
  string name = 2;
}

message CreateNonRootAutoPartComponentRequest {
  int32 parent_id = 1;
  string name = 2;
}

message GetAutoPartComponentRequest {
  int32 id = 1;
}
 
message UpdateAutoPartComponentRequest {
  int32 id = 1;
  string name = 2;
}
 
message DeleteAutoPartComponentRequest {
  int32 id = 1;
}
 
message AutoPartComponent {
  int32 id = 1;
  string name = 2;
  repeated int32 componentIds = 3;
}